<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">medRegister</string>

    <!-- Strings related to login, register new account, reset password, account settings -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="forgot_password">Password reset</string>
    <string name="register">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="pill_logo">pill Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign out</string>
    <string name="account_settings">Account Settings</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="name_settings">Name</string>
    <string name="phone_number_settings">Phone Number</string>
    <string name="db_users">field_users</string>
    <string name="field_name">name</string>
    <string name="field_phone">phone</string>

    <!-- Strings for home fragment -->
    <string name="register_pills">Register Medications</string>
    <string name="schedule_pill">Schedule Medications</string>
    <string name="notes">Notes</string>
    <string name="to_do">To do</string>
    <string name="healthy_tips">Healthy Tips</string>

    <!-- Strings for Register Pill activity -->
    <string name="register_new_pill">Register new medication</string>
    <string name="delete_all_pills">Delete all medications</string>
    <string name="pill_name">Medication name</string>
    <string name="instruction">Medication Instruction</string>
    <string name="add">ADD</string>
    <string name="daily_usage">Daily usage: </string>
    <string name="package_contains">Package Contains: </string>
    <string name="nr_pills"> pills</string>
    <string name="numOfPillsInPackage">Content of medication in package:</string>
    <string name="list_instruction">Instruction</string>
    <string name="last_modified">Last modified:</string>
    <string name="number_1">1</string>
    <string name="paracetamol">Paracetamol</string>
    <string name="dose_mg">500 mg</string>

    <!-- Dialog strings -->
    <string name="dialog_register_pill">RegisterPillDialog</string>


    <string name="dialog_delete">DELETE</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="intent_pill">intent_pill</string>

    <!-- strings for To do activity -->
    <string name="edit_text">Add new reminder</string>
    <string name="edit_title">Reminder</string>
    <string name="date">Date</string>
    <string name="delete_all_reminders">Delete all reminders</string>

    <!-- strings for App Information activity -->
    <string name="app_information">About</string>
    <string name="version_code">Version Code</string>
    <string name="version_name">Version Name</string>

    <!-- strings for Schedule Pill  activity -->
    <string name="schedule_pill_extended_fob">Schedule Pill</string>
    <string name="med_name">Medication name</string>
    <string name="every_day">Every day</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <string name="time_scheduled">Time</string>
    <string name="dose_scheduled">Dose (in mg)</string>

    <!-- strings for Notes activity -->
    <string name="new_note">Enter new note</string>
    <string name="add_note">Add</string>
    <string name="reset_all_notes">Reset</string>
    <string name="enter_text">Enter text</string>
    <string name="update_text">Update</string>


    <!-- strings for notifications -->
    <string name="notification_title">MedRegister</string>
    <string name="notification_text">It\'s time to take the medication!</string>


    <!-- strings for toast messages -->
    <string name="to_do_activity_title">To Do Activity</string>
    <string name="reminder_deleted">Reminder deleted</string>
    <string name="reminder_saved">Reminder saved</string>
    <string name="reminder_couldnt_update">Reminder couldn\'t be updated</string>
    <string name="reminder_updated">Reminder updated</string>
    <string name="reminder_not_saved">Reminder not saved</string>
    <string name="all_reminders_deleted">All reminders deleted</string>
    <string name="insert_reminder">Please insert reminder</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="add_reminder">Add Reminder</string>

    <string name="dialog_sign_out">Sign out</string>
    <string name="dialog_sign_out_message">Are you sure you want to sign out ?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="saved">Saved</string>
    <string name="sent_reset_password_link">Sent Password Reset Link to Email</string>
    <string name="no_user_with_this_email">No User Associated with that Email</string>
    <string name="signed_out">Signed out</string>

    <string name="schedule_pills_title">Schedule medications</string>
    <string name="schedule_pill_title">Schedule medication</string>
    <string name="edit_scheduled_medication">Edit scheduled medication</string>
    <string name="pill_scheduled">Medication scheduled</string>
    <string name="pill_not_scheduled">Medication not scheduled</string>
    <string name="scheduled_pill_deleted">Scheduled medication intake deleted</string>

    <string name="register_pills_title">Register Medication</string>
    <string name="pill_deleted">Medication Deleted</string>
    <string name="pill_saved">Medication saved</string>
    <string name="pill_couldnt_update">Medication couldn\'t be updated</string>
    <string name="pill_updated">Medication updated</string>
    <string name="pill_not_saved">Medication not saved</string>
    <string name="all_pills_deleted">All medications deleted</string>

    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="register_with_correct_email">Please Register with a GMAIL domain address</string>
    <string name="fill_all_fields">Please fill all the necessary fields</string>
    <string name="sent_verification_email">Sent Verification Email</string>
    <string name="couldnt_send_verification_email">Couldn\'t Send Verification Email</string>
    <string name="something_wrong">Something went wrong.</string>
    <string name="unable_to_register">Unable to Register</string>

    <string name="notes_title">Notes</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="authenticated_with">Authenticated with: </string>
    <string name="email_not_verified">Email is not Verified\nCheck your Inbox</string>
    <string name="healthy_tips_title">Healthy Tips</string>
    <string name="about_app_info">About</string>

    <string name="insert_pill_name_instruction">Please insert the medication name and instruction</string>
    <string name="edit_pill">Edit Medication</string>
    <string name="add_pill">Add Medication</string>

    <string name="invalid_credentials">Invalid Credentials.\nReset your password and try again</string>
    <string name="password_reset_link_sent">Password Reset Link Sent to Email</string>
    <string name="no_user_associated_with_email">No User is Associated with that Email</string>

    <string name="select_time">Select time</string>

    <!-- strings for healthy tips -->
    <string name="healthy_tip_1_title">Eat a healthy diet</string>
    <string name="tip_1">Eat a combination of different foods, including fruit, vegetables, legumes, nuts and whole grains.</string>
    <string name="healthy_tip_2_title">Consume less salt and sugar</string>
    <string name="tip_2">Filipinos consume twice the recommended amount of sodium, putting them at risk of high blood pressure.</string>
    <string name="healthy_tip_3_title">Reduce intake of harmful fats</string>
    <string name="tip_3">Fats consumed should be less than 30% of your total energy intake. This will help prevent unhealthy weight gain and NCDs.</string>
    <string name="healthy_tip_4_title">Avoid harmful use of alcohol</string>
    <string name="tip_4">There is no safe level for drinking alcohol</string>
</resources>
