<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_update_pill"
        android:textColor="@color/Black"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/update_pill_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/pill_name"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/update_instruction_pill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/instruction"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/update_numOfPillsInPackage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/numOfPillsInPackage"
        android:inputType="number" />

    <EditText
        android:id="@+id/update_daily_usage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/daily_usage"
        android:inputType="number" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/update_dialogCancelPill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"

            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cancel"
            android:textColor="@color/linkBlue"
            android:textSize="15sp" />

        <Button
            android:id="@+id/dialog_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/dialog_update_pill"
            android:textColor="@color/linkBlue"
            android:textSize="15sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</LinearLayout>


